🐛  fix header on mobile home

--- a/user/themes/landed/css/custom.css
+++ b/user/themes/landed/css/custom.css
@@ -48,8 +48,11 @@
 
 @media all and (max-width: 736px) {
   #header {
-    background: #000;
     height: 6em;
+  }
+
+  #header:not(.home) {
+    background: #000;
   }
 
   #logo img {
